# ftse-rs

./: Cargo.toml  README.md
src/: build_table.rs  cli.yml  constants.rs  fetch_market.rs  format_url.rs  get_market.rs  get_url.rs  main.rs  parse_table.rs  select_market.rs
