[package]
name = "ftse"
version = "0.1.0"
authors = ["rickycodes <ricky.miller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features=["rustls-tls", "json"], default-features = false }
tokio = { version = "0.2", features = ["full"] }
select = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
yaml-rust = "0.4"
serde_json = "1"
